--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Telemedicine Video Consultation</title>
     <link rel="stylesheet" href="styles.css">
     <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 </head>
 <body>
@@ -17,7 +18,13 @@
         </div>
     </div>
     <div id="video-grid"></div>
+    <div class="chat-container">
+        <div class="chat-messages" id="chat-messages"></div>
+        <input type="text" id="chat-input" placeholder="Type a message..." />
+        <button class="btn" id="sendButton">Send</button>
+    </div>
     <script>
+        const ROOM_ID = window.location.pathname.split('/')[1];
         const socket = io('/');
         const videoGrid = document.getElementById('video-grid');
         const myVideo = document.createElement('video');
@@ -83,6 +90,30 @@
         myPeer.on('open', id => {
             socket.emit('join-room', ROOM_ID, id);
         });
+
+        const chatInput = document.getElementById('chat-input');
+        const chatMessages = document.getElementById('chat-messages');
+        const sendButton = document.getElementById('sendButton');
+
+        sendButton.addEventListener('click', () => {
+            const message = chatInput.value;
+            if (message) {
+                socket.emit('message', message);
+                addMessage(`You: ${message}`);
+                chatInput.value = '';
+            }
+        });
+
+        socket.on('createMessage', message => {
+            addMessage(message);
+        });
+
+        function addMessage(message) {
+            const messageElement = document.createElement('div');
+            messageElement.textContent = message;
+            chatMessages.append(messageElement);
+            chatMessages.scrollTop = chatMessages.scrollHeight;
+        }
     </script>
 </body>
 </html>
